- Fix Bug #34019 by popular demand: Implementing interface with a   __construct method strange behaviour